--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,12 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --color-hex-orange: #f47c2b;
+  --color-hex-orange-hover: #e66a1f;
+  --color-hex-bg-gray: #fdf9f2;
+  --color-hex-blue: #1e4b87;
+  --color-hex-blue-hover: #1a3f74;
 }
 
 @media (prefers-color-scheme: dark) {
